src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Imported_ID__c</fullName>
        <description>Hidden Field Created for Eve</description>
        <label>Account_Imported_ID</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acronym__c</fullName>
        <description>Short account name. Used on contact for Project/Contact ID formula.</description>
        <inlineHelpText>e.g. CJC for Civic Justice Corp or CASES for Center for Alternative Sentencing and Employment Services</inlineHelpText>
        <label>Acronym</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Type__c</fullName>
        <description>CEP: What type of services are provided by the agency.</description>
        <label>Agency Type</label>
        <picklist>
            <picklistValues>
                <fullName>College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ed. Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internship Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Training/Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Youth Development</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Billable_for_START__c</fullName>
        <label>Billable for which Programs?</label>
        <picklist>
            <picklistValues>
                <fullName>START</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIRT</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Bklyn_CIRT_Client_Status__c</fullName>
        <description>used as tags for cirt migration</description>
        <label>Bklyn CIRT Client Status</label>
        <picklist>
            <picklistValues>
                <fullName>Never Enrolled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete Screening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bklyn_CIRT_Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temporary field to identify bklyn cirt accounts</description>
        <label>Bklyn CIRT Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bureau_Chief_Phone__c</fullName>
        <description>PRP - QC, as per SPA requirement to use special field instead of native SF related contacts</description>
        <label>Bureau Chief Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Bureau_Chief__c</fullName>
        <description>PRP - QC: Head of specific Parole Bureau</description>
        <label>Bureau Chief</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CJ_Agency_Type__c</fullName>
        <description>Need for filtered look up on contact to limit result set</description>
        <label>CJ Agency Type</label>
        <picklist>
            <picklistValues>
                <fullName>OCFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parole</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PRP Cycles</relationshipLabel>
        <relationshipName>AccountsClient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Notes__c</fullName>
        <label>Contact Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Email__c</fullName>
        <description>PRP - QC required by SPA in place of using native SF contact relationships</description>
        <label>Contact Person Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Title__c</fullName>
        <description>PRP - QC: As per SPA, requires special field rather than use native contact capability</description>
        <label>Contact Person Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <label>Contact Person</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_TA_Program__c</fullName>
        <description>Name of Treatment Program client was most currently enrolled at.</description>
        <inlineHelpText>How to populate?</inlineHelpText>
        <label>Current TA Program</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declarative_Scheduler_DateTime__c</fullName>
        <label>Declarative Scheduler DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>File_Number__c</fullName>
        <label>File Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>if(find(&quot; &quot;, Name, find(&quot; &quot;, Name)+1) = 0, left(Name, find(&quot; &quot;, Name)), left(Name, find(&quot; &quot;, Name, find(&quot; &quot;, Name)+1)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Follow up contact account id = ta account id AND follow up contact record type is TA Contact</description>
        <label>Follow Up Contact Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Treatment Agency Contact</value>
            </filterItems>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Follow Up Contact Name)</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Contact_Phone__c</fullName>
        <formula>Follow_Up_Contact_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Follow Up Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_up_Contact_Email__c</fullName>
        <formula>Follow_Up_Contact_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Follow-up Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_up_Contact_Title__c</fullName>
        <formula>Follow_Up_Contact_Name__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Follow-up Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender_Other__c</fullName>
        <description>If gender = Other, enter gender here</description>
        <label>Gender (Other)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gender Non-Conforming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nonbinary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transgender Man</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transgender Woman</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Health_Home_RPT__c</fullName>
        <formula>includes(Agency_Type__c,  &quot;Health Home&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Health Home RPT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Intake_Contact_Email__c</fullName>
        <formula>Intake_Contact_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intake Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intake_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PRP - QC: Treatment Program Staff who are contacted to check on whether or not client became an intake. Filtered lookup.  Ideally, in the future we could add a mutlipicklist to Contact and add that value to the filter. This would limit the lookup to only those staff at a TA who are marked as intake coordinator, and allow one TA contact to play multiple roles</description>
        <inlineHelpText>Select the Treatment Program person who will be contacted to confirm client&apos;s intake status at the outside program.</inlineHelpText>
        <label>Intake Contact Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Treatment Agency Contact</value>
            </filterItems>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (TA Intake Coordinator)</relationshipLabel>
        <relationshipName>Accounts6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intake_Contact_Title__c</fullName>
        <formula>Intake_Contact_Name__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intake Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>if(find(&quot; &quot;, Name, find(&quot; &quot;, Name)+1) = 0, right(Name, (len(Name) - find(&quot; &quot;, Name))), 
right(Name, (len(Name) - find(&quot; &quot;, Name, find(&quot; &quot;, Name)+1))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Database_Id__c</fullName>
        <label>Legacy Database Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_PRP_nParticID__c</fullName>
        <description>From Access database: Primary key of client (corresponds to nParticID). Used for PRP migration purposes. CAN BE DELETED in future if desired. Eve Nunez</description>
        <label>Legacy PRP nParticID</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_Treatment_Program_ID__c</fullName>
        <description>From Access database: Primary key of treatment program. Used for PRP migration purposes. CAN BE DELETED upon completion. Eve Nunez</description>
        <inlineHelpText>From Access database: Primary key of treatment program. Used for PRP migration purposes. CAN BE DELETED upon completion. Eve Nunez</inlineHelpText>
        <label>Legacy Treatment Program ID</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MSR_Contact_Email__c</fullName>
        <formula>MSR_Contact_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MSR Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSR_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PRP - QC: Treatment Program Staff who are responsible for the Monthly Status Report. May need to add Parent Id to the filter if, for example, staff at Daytop central office are the MSR contact for all Daytop programs.  However, since these are &quot;Optional&quot; filters, they can be ignored by the user. Since most TAs are single location agencies, this should not be a big deal.</description>
        <label>MSR Contact Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Treatment Agency Contact</value>
            </filterItems>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <infoMessage>Select TA staff who will be responsible for the Monthly Status Report</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (MSR Contact Name)</relationshipLabel>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MSR_Contact_Phone__c</fullName>
        <formula>MSR_Contact_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MSR Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSR_Contact_Title__c</fullName>
        <formula>MSR_Contact_Name__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MSR Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NYSID_Number__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Format: 8 numbers and 1 character
NNNNNNNNC (no spaces).</inlineHelpText>
        <label>NYSID #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neighborhood__c</fullName>
        <label>Neighborhood</label>
        <picklist>
            <picklistValues>
                <fullName>Astoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auburndale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bath Beach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bathgate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Battery Park City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bay Ridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bayside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bedford Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bedford Stuyvesant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belmont</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bensonhurst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boro Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breezy Point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Briarwood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brighton Beach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broad Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronxdale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brooklyn Heights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brownsville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bushwick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canarsie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carroll Gardens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Harlem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chelsea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinatown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civic Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claremont</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coney Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-Op City</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Num_of_Accounts__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Num of Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Preferred_Pronoun_Other__c</fullName>
        <description>preferred pronoun if other</description>
        <label>Preferred Pronoun (Other)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Pronouns__c</fullName>
        <label>Preferred Pronouns</label>
        <picklist>
            <picklistValues>
                <fullName>She/Her</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>He/Him</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>They/Their</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RIN__c</fullName>
        <description>RIN # Youth identifier: Respondent Identification Number (RIN);    Source: DOP</description>
        <externalId>true</externalId>
        <inlineHelpText>RIN number format is: letter R followed by a four digit year and a string of five or six numbers: &quot;RYYYY12345&quot;</inlineHelpText>
        <label>RIN #</label>
        <length>11</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SRP_Import_ID__c</fullName>
        <description>Created 9/6/2016.  Delete when obsolete.</description>
        <label>SRP Import ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA_Intake_Contact_Phone__c</fullName>
        <description>PRP - QC: Intake Coordinator&apos;s phone, related record field</description>
        <formula>Intake_Contact_Name__r.Phone</formula>
        <label>Intake Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transgender__c</fullName>
        <description>Is the client transgender?</description>
        <label>Transgender</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rrpu__Alert_Message__c</fullName>
        <description>This field is installed by Riptide Pop-up Alerts and is used in conjunction with the Pop-up Alert S-Control.</description>
        <inlineHelpText>If you enter text into this field the text will be displayed in a pop-up message whenever someone views this record.</inlineHelpText>
        <label>Alert Message</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>All_Clients</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>DOB__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Client</value>
        </filters>
        <label>All Clients</label>
    </listViews>
    <listViews>
        <fullName>All_Individuals_Screened_for_PRP</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Last_Name__c</columns>
        <columns>First_Name__c</columns>
        <columns>NYSID_Number__c</columns>
        <columns>DOB__c</columns>
        <columns>Gender__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>012600000005EpC</value>
        </filters>
        <label>CC/P - All Screened Individuals</label>
        <sharedTo>
            <role>Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEP_External_Recently_Created</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.CASESPrograms,Account.ExternalEntities</value>
        </filters>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_MONTH,THIS_MONTH</value>
        </filters>
        <label>CEP External - Recently Created</label>
        <sharedTo>
            <role>Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Daytime_Custody_All</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>NYSID_Number__c</columns>
        <columns>DOB__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>012600000005Mky</value>
        </filters>
        <label>Daytime Custody All</label>
        <sharedTo>
            <group>START_Staff</group>
            <role>Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Employer_Sites_Youth_Programs</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>Agency_Type__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>Contact_Person__c</columns>
        <columns>Contact_Notes__c</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.ExternalEntities</value>
        </filters>
        <filters>
            <field>Agency_Type__c</field>
            <operation>includes</operation>
            <value>Employer</value>
        </filters>
        <label>Employer Sites - Youth Programs</label>
        <sharedTo>
            <role>Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>External_Agencies</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Imported_ID__c</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.ExternalEntities</value>
        </filters>
        <filters>
            <field>Account_Imported_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>CEP - External Agencies</label>
        <sharedTo>
            <role>Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HealthHomes</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Health_Home_RPT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Health_Home_RPT__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Health Homes</label>
    </listViews>
    <listViews>
        <fullName>Internship_Sites_Youth_Programs</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>Agency_Type__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>Contact_Person__c</columns>
        <columns>Contact_Notes__c</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.ExternalEntities</value>
        </filters>
        <filters>
            <field>Agency_Type__c</field>
            <operation>includes</operation>
            <value>Internship Provider</value>
        </filters>
        <label>Internship Sites - Youth Programs</label>
        <sharedTo>
            <role>Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Parole_Offices_View</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.PHONE2</columns>
        <columns>Bureau_Chief_Phone__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Parole_Office</value>
        </filters>
        <label>CC/P - Parole Bureaus</label>
        <sharedTo>
            <role>Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Treatment_Agencies</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.PHONE2</columns>
        <columns>Intake_Contact_Name__c</columns>
        <columns>TA_Intake_Contact_Phone__c</columns>
        <columns>Follow_Up_Contact_Name__c</columns>
        <columns>Follow_Up_Contact_Phone__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Treatment_Agency</value>
        </filters>
        <label>CC/P - Treatment Agencies</label>
        <sharedTo>
            <role>Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X4_All_Other_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>012600000005EpC,Account.Parole_Office,Account.Treatment_Agency</value>
        </filters>
        <label>CC/P - All Other Accounts</label>
        <sharedTo>
            <role>Executive</role>
            <roleAndSubordinates>PRP</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>CASESPrograms</fullName>
        <active>true</active>
        <description>Internal Programs run by CASES. e.g. CEP</description>
        <label>CASES Programs</label>
    </recordTypes>
    <recordTypes>
        <fullName>Client</fullName>
        <active>true</active>
        <description>Any CASES&apos; Program participant</description>
        <label>Client</label>
    </recordTypes>
    <recordTypes>
        <fullName>Crimnal_Justice_Agencies</fullName>
        <active>true</active>
        <description>May need to redo this.</description>
        <label>Crimnal Justice Agencies</label>
    </recordTypes>
    <recordTypes>
        <fullName>ExternalEntities</fullName>
        <active>true</active>
        <description>External Agencies that interact with CASES, e.g. hospitals, schools, etc.</description>
        <label>External Entities</label>
    </recordTypes>
    <recordTypes>
        <fullName>NYC_Court</fullName>
        <active>true</active>
        <description>All - NYC Court</description>
        <label>NYC Court</label>
    </recordTypes>
    <recordTypes>
        <fullName>NYC_Department_of_Corrections</fullName>
        <active>true</active>
        <label>NYC Department of Corrections</label>
    </recordTypes>
    <recordTypes>
        <fullName>Parole_Office</fullName>
        <active>true</active>
        <description>New York State Division of Parole</description>
        <label>Parole Office</label>
    </recordTypes>
    <recordTypes>
        <fullName>Treatment_Agency</fullName>
        <active>true</active>
        <description>Treatment Center - agency to which clients are referred for services</description>
        <label>Treatment Agency</label>
    </recordTypes>
</CustomObject>